--- a/test.ipynb
+++ b/test.ipynb
@@ -2,21 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from os import add_dll_directory\n",
+    "add_dll_directory('/MinGW/bin/')\n",
     "import importlib\n",
     "from src import fractions as cyfractions\n",
     "import fractions\n",
     "import quicktions\n",
     "from decimal import Decimal\n",
+    "from src.cydecimal import add_decimals, subtract_decimals, new_decimal_from_int, new_decimal_from_string, new_decimal_from_large_double, dec_2_str\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -65,13 +69,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dec1 = new_decimal_from_string(b'1294.0')\n",
+    "for i in dec1['digits']:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "not enough values found during array assignment, expected 200, got 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_ipython\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_cell_magic\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtimeit\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msubtract_decimals(dec1, dec1)\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py:2517\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[1;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[0;32m   2515\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[0;32m   2516\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[1;32m-> 2517\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2519\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[0;32m   2520\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[0;32m   2521\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[0;32m   2522\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\magics\\execution.py:1185\u001b[0m, in \u001b[0;36mExecutionMagics.timeit\u001b[1;34m(self, line, cell, local_ns)\u001b[0m\n\u001b[0;32m   1183\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m10\u001b[39m):\n\u001b[0;32m   1184\u001b[0m     number \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m index\n\u001b[1;32m-> 1185\u001b[0m     time_number \u001b[38;5;241m=\u001b[39m \u001b[43mtimer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtimeit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnumber\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1186\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m time_number \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.2\u001b[39m:\n\u001b[0;32m   1187\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\magics\\execution.py:173\u001b[0m, in \u001b[0;36mTimer.timeit\u001b[1;34m(self, number)\u001b[0m\n\u001b[0;32m    171\u001b[0m gc\u001b[38;5;241m.\u001b[39mdisable()\n\u001b[0;32m    172\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 173\u001b[0m     timing \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minner\u001b[49m\u001b[43m(\u001b[49m\u001b[43mit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtimer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    174\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    175\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m gcold:\n",
+      "File \u001b[1;32m<magic-timeit>:1\u001b[0m, in \u001b[0;36minner\u001b[1;34m(_it, _timer)\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\owner\\Desktop\\python\\fractals\\src\\cydecimal.pxd:115\u001b[0m, in \u001b[0;36msrc.cydecimal.subtract_decimals\u001b[1;34m()\u001b[0m\n\u001b[0;32m    113\u001b[0m cdef inline _cydecimal _subtract_decimals(_cydecimal first, _cydecimal second) noexcept nogil\n\u001b[0;32m    114\u001b[0m \n\u001b[1;32m--> 115\u001b[0m cpdef inline _cydecimal subtract_decimals(_cydecimal first, _cydecimal second) noexcept nogil:\n\u001b[0;32m    116\u001b[0m     return _subtract_decimals(first, second)\n\u001b[0;32m    117\u001b[0m \n",
+      "File \u001b[1;32m<stringsource>:21\u001b[0m, in \u001b[0;36mFromPyStructUtility.__pyx_convert__from_py_struct___cydecimal\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m<stringsource>:95\u001b[0m, in \u001b[0;36mcarray.from_py.__Pyx_carray_from_py_char\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: not enough values found during array assignment, expected 200, got 0"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "subtract_decimals(dec1, dec1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%timeit f = cyfractions.fraction(numerator=1544353451212332142, denominator=2312);\n",
     "\n",
-    "cyfractions.square(f)"
+    "cyfractions.sub_fractions(f, f)"
    ]
   },
   {
@@ -90,7 +134,7 @@
    "source": [
     "%%timeit f = quicktions.Fraction(1544353451212332142, 2312);\n",
     "\n",
-    "f**2"
+    "f-f"
    ]
   },
   {
@@ -109,7 +153,7 @@
    "source": [
     "%%timeit f = fractions.Fraction(1544353451212332142, 2312);\n",
     "\n",
-    "f+1"
+    "f-f"
    ]
   },
   {
@@ -127,7 +171,7 @@
    ],
    "source": [
     "%%timeit f = 1544353451212332142/2312\n",
-    "f+1"
+    "f-f"
    ]
   },
   {
@@ -145,7 +189,7 @@
    ],
    "source": [
     "%%timeit f = Decimal(1544353451212332142)/Decimal(2312)\n",
-    "f+1"
+    "f-f"
    ]
   }
  ],
