--- a/test.ipynb
+++ b/test.ipynb
@@ -83,7 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "246 ns ± 9.36 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "42.5 ns ± 4.04 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
      ]
     }
    ],
@@ -101,7 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "479 ns ± 17.6 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "510 ns ± 34.4 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "824 ns ± 54.6 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "862 ns ± 27.6 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.28 µs ± 77.9 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "2.73 µs ± 370 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -159,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43.1 ns ± 1.26 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+      "46.8 ns ± 5.61 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
      ]
     }
    ],
@@ -178,14 +178,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "581 ns ± 61.6 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "445 ns ± 12.8 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
-    "f = Decimal(1544353451212332142)/Decimal(2312)\n",
-    "f-f"
+    "f = Decimal(54134)\n",
+    "f2 = Decimal(6134)\n",
+    "f-f2"
    ]
   }
  ],
