fixed decimal to string bugs

--- a/test copy.ipynb
+++ b/test copy.ipynb
@@ -14,7 +14,7 @@
     "import quicktions\n",
     "from decimal import Decimal\n",
     "from tests.cynum import test\n",
-    "\n",
+    "test()\n",
     "    "
    ]
   },
@@ -69,13 +69,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -83,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.5 ns ± 4.04 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+      "920 ns ± 184 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -101,14 +94,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "510 ns ± 34.4 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "1.07 µs ± 111 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit \n",
     "f = cyfractions.fraction(numerator=1544353451212332142, denominator=2312);\n",
-    "cyfractions.sub_fractions(f, f)"
+    "f1 = cyfractions.fraction(numerator=123213123, denominator=2345354512);\n",
+    "cyfractions.sub_fractions(f, f1)"
    ]
   },
   {
@@ -120,14 +114,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "862 ns ± 27.6 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "1.47 µs ± 128 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit \n",
     "f = quicktions.Fraction(1544353451212332142, 2312);\n",
-    "\n",
+    "f1 = quicktions.Fraction(123213123, 2345354512);\n",
     "f-f"
    ]
   },
@@ -140,13 +134,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.73 µs ± 370 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "3.81 µs ± 265 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
     "f = fractions.Fraction(1544353451212332142, 2312);\n",
+    "f1 = fractions.Fraction(123213123, 2345354512);\n",
     "f-f"
    ]
   },
@@ -159,14 +154,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46.8 ns ± 5.61 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+      "60.4 ns ± 6.68 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
     "f = 1544353451212332142/2312\n",
-    "f-f"
+    "f1 = 123213123/2345354512\n",
+    "f-f1"
    ]
   },
   {
@@ -178,14 +174,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "445 ns ± 12.8 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "3.01 µs ± 183 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
-    "f = Decimal(54134)\n",
-    "f2 = Decimal(6134)\n",
+    "f = Decimal(12.5712)\n",
+    "f2 = Decimal(39.19001)\n",
     "f-f2"
    ]
   }
