--- a/test copy.ipynb
+++ b/test copy.ipynb
@@ -14,6 +14,7 @@
     "import quicktions\n",
     "from decimal import Decimal\n",
     "from tests.cynum import test\n",
+    "from tests.cynum import cydecimal\n",
     "test()\n",
     "    "
    ]
@@ -76,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "920 ns ± 184 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "465 ns ± 25.8 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -94,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.07 µs ± 111 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "726 ns ± 36.6 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -102,7 +103,7 @@
     "%%timeit \n",
     "f = cyfractions.fraction(numerator=1544353451212332142, denominator=2312);\n",
     "f1 = cyfractions.fraction(numerator=123213123, denominator=2345354512);\n",
-    "cyfractions.sub_fractions(f, f1)"
+    "cyfractions.mult_fractions(f, f1)"
    ]
   },
   {
@@ -114,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.47 µs ± 128 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "1.22 µs ± 35.9 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -122,7 +123,7 @@
     "%%timeit \n",
     "f = quicktions.Fraction(1544353451212332142, 2312);\n",
     "f1 = quicktions.Fraction(123213123, 2345354512);\n",
-    "f-f"
+    "f*f"
    ]
   },
   {
@@ -134,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.81 µs ± 265 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "3.05 µs ± 72.8 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -142,7 +143,7 @@
     "%%timeit\n",
     "f = fractions.Fraction(1544353451212332142, 2312);\n",
     "f1 = fractions.Fraction(123213123, 2345354512);\n",
-    "f-f"
+    "f*f"
    ]
   },
   {
@@ -154,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60.4 ns ± 6.68 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+      "54.7 ns ± 4.11 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
      ]
     }
    ],
@@ -162,7 +163,7 @@
     "%%timeit\n",
     "f = 1544353451212332142/2312\n",
     "f1 = 123213123/2345354512\n",
-    "f-f1"
+    "f*f1"
    ]
   },
   {
@@ -174,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.01 µs ± 183 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "2.71 µs ± 150 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
@@ -182,7 +183,7 @@
     "%%timeit\n",
     "f = Decimal(12.5712)\n",
     "f2 = Decimal(39.19001)\n",
-    "f-f2"
+    "f*f2"
    ]
   }
  ],
