--- a/test copy.ipynb
+++ b/test copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "524 ns ± 38.4 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "552 ns ± 40.9 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -87,37 +87,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.37 µs ± 143 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "332 ns ± 10.3 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit \n",
-    "x = (new_decimal_from_double(12.5712))\n",
-    "y =  new_decimal_from_double(39.19001)\n",
-    "mult_decimals(x,y)"
+    "x = (new_decimal_from_double(12))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.08 µs ± 10.3 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit \n",
     "f = cyfractions.fraction(numerator=1544353451212332142, denominator=2312);\n",
@@ -127,17 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.06 µs ± 150 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit \n",
     "f = quicktions.Fraction(1544353451212332142, 2312);\n",
@@ -147,17 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.75 µs ± 220 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "f = fractions.Fraction(1544353451212332142, 2312);\n",
@@ -167,17 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "80.4 ns ± 6.09 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "f = 1544353451212332142/2312\n",
@@ -187,17 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.75 µs ± 192 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "f = Decimal(12.5712)\n",
